<resources>
    <string name="app_name">Budgeting App</string>
    <string name="balance">Balance:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="pick_date">Pick Date</string>
    <string name="category">Category</string>
    <string name="shopping">Shopping</string>
    <string name="entertainment">Entertainment</string>
    <string name="transportation">Transportation</string>
    <string name="foods">Foods</string>
    <string name="others">Others</string>

    <string-array name="ExpenseType">
        <item>Shopping</item>
        <item>Entertainment</item>
        <item>Transportation</item>
        <item>Foods</item>
        <item>Others</item>
    </string-array>
</resources>
