<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailBudgetActivity">

    <LinearLayout
        app:layout_constraintVertical_bias="0.3"
        android:orientation="vertical"
        app:layout_constraintVertical_chainStyle="packed"
        android:id="@+id/container_shopping"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toTopOf="@id/container_entertainment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_alignParentStart="true"
                android:textSize="18sp"
                android:textStyle="bold"

                android:text="@string/shopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/param_shopping"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ASDASD"/>

        </RelativeLayout>



        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:inputType="number"
            android:id="@+id/pb_shopping"
            android:layout_width="match_parent"
            android:layout_height="30dp" />




    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/container_entertainment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toTopOf="@id/container_transportation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_shopping">
        <RelativeLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_alignParentStart="true"
                android:textSize="18sp"
                android:textStyle="bold"

                android:text="@string/entertainment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/param_entertainment"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ASDASD"/>

        </RelativeLayout>


        <ProgressBar

            style="?android:attr/progressBarStyleHorizontal"
            android:inputType="number"
            android:id="@+id/pb_entertainment"
            android:layout_width="match_parent"
            android:layout_height="30dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/container_transportation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toTopOf="@id/container_foods"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_entertainment">
        <RelativeLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_alignParentStart="true"
                android:textSize="18sp"
                android:textStyle="bold"

                android:text="@string/transportation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/param_transportation"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ASDASD"/>

        </RelativeLayout>
        <ProgressBar

            style="?android:attr/progressBarStyleHorizontal"
            android:inputType="number"
            android:id="@+id/pb_transportation"
            android:layout_width="match_parent"
            android:layout_height="30dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/container_foods"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toTopOf="@id/container_others"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_transportation">
        <RelativeLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_alignParentStart="true"
                android:textSize="18sp"
                android:textStyle="bold"

                android:text="@string/foods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/param_foods"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ASDASD"/>

        </RelativeLayout>

        <ProgressBar

            style="?android:attr/progressBarStyleHorizontal"
            android:inputType="number"
            android:id="@+id/pb_foods"
            android:layout_width="match_parent"
            android:layout_height="30dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/container_others"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_foods">
        <RelativeLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_alignParentStart="true"
                android:textSize="18sp"
                android:textStyle="bold"

                android:text="@string/others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/param_others"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ASDASD"/>

        </RelativeLayout>

        <ProgressBar

            style="?android:attr/progressBarStyleHorizontal"
            android:inputType="number"
            android:id="@+id/pb_others"
            android:layout_width="match_parent"
            android:layout_height="30dp" />


    </LinearLayout>

    <Button
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/container_others"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/btn_goToBudgetActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Buat Budget"/>

</androidx.constraintlayout.widget.ConstraintLayout>